--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'application'
+    id 'java'
 }
 
 group 'com.github.AndrewAlbizati'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -13,17 +13,29 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
-    implementation 'org.javacord:javacord:3.3.2'
+    implementation 'org.javacord:javacord:3.4.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
-application {
-    mainClass = 'com.github.AndrewAlbizati.Bot'
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
-test {
-    useJUnitPlatform()
+rootProject.tasks.named("jar") {
+    duplicatesStrategy = 'include'
+}
+
+jar {
+    doFirst {
+        manifest {
+            attributes "Main-Class": "com.github.AndrewAlbizati.Bot"
+        }
+
+        from {
+            configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+        }
+    }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
 }
