--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ rootProject.tasks.named("jar") {
 jar {
     doFirst {
         manifest {
-            attributes "Main-Class": "com.github.AndrewAlbizati.Bot"
+            attributes "Main-Class": "com.github.AndrewAlbizati.Main"
         }
 
         from {
